--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Team Synergy</title>
   </head>
   <body class="bg-neutral-950">
     <div id="root"></div>
